@@ -1,6 +1,6 @@
 .\"
-.\" Copyright (c) 2004-2023 Craig Small <csmall@dropbear.xyz>
-.\" Copyright (c) 2013-2023 Jim Warner <james.warner@comcast.net>
+.\" Copyright (c) 2004-2024 Craig Small <csmall@dropbear.xyz>
+.\" Copyright (c) 2013-2024 Jim Warner <james.warner@comcast.net>
 .\" Copyright (c) 2011-2012 Sami Kerola <kerolasa@iki.fi>
 .\" Copyright (c) 2002-2004 Albert Cahalan
 .\" Copyright (c) 2000      Kjetil Torgrim Homme
@@ -10,7 +10,7 @@
 .\" the Free Software Foundation; either version 2 of the License, or
 .\" (at your option) any later version.
 .\"
-.TH PGREP "1" "2023-10-04" "procps-ng" "User Commands"
+.TH PGREP "1" "2024-02-05" "procps-ng" "User Commands"
 .SH NAME
 pgrep, pkill, pidwait \- look up, signal, or wait for processes based on name and other attributes
 .SH SYNOPSIS
@@ -182,6 +182,7 @@ or
 .B pidwait
 than
 .BR pgrep .
+The filename "\-" can be used to read from \fISTDIN\fR.
 .TP
 \fB\-L\fR, \fB\-\-logpidfile\fR
 Fail if pidfile (see \fB\-F\fR) not locked.
@@ -266,6 +267,10 @@ Example 4: Make all
 processes run nicer:
 .IP
 $ renice +4 $(pgrep chrome)
+.PP
+Example 5: Wait for a process with a known PID to finish:
+.IP
+$ echo ${PID} | pidwait -F -
 .SH "EXIT STATUS"
 .TP
 .B 0
